# vmr-outbound

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
Historic Data/: 2,5 Furandicarboxylic Acid (FDCA) Market.xlsx  3D Interposer Market .xlsx  AI Avatar App Market.xlsx  AI in Pharmaceutical Market.xlsx  Advanced Energy Storage Systems Market.xlsx  Aerospace Lithium-Ion Battery Market .xlsx  Aluminum-ion Battery Market.xlsx  Ammonium Thiosulfate Fertilizer Market.xlsx  Angiographic Guidewire Market.xlsx  Antimicrobial Plastic Additives Market.xlsx  Artificial Intelligence Advisory Service Market.xlsx  Bio-Based Chemicals Market.xlsx  Blockchain for Enterprise Applications Market .xlsx  Building And Home Automation Market .xlsx  Cannabis Cosmetics Market.xlsx  Citrus Limon Peel Extract Market.xlsx  Classified Platforms Market.xlsx  Coconut Milk And Cream Market.xlsx  Collagen Fruit Drink Market.xlsx  Compost Service Market.xlsx  Cryptocurrency Software Market.xlsx  Customized Jewelry Market.xlsx  Diaphragm Compressors Market.xlsx  Digital Commerce Platform Market.xlsx  Digital Pest Management Market .xlsx  Distance Learning Solutions Market.xlsx  EV Fast Charging Technology Market.xlsx  Elearning Authoring Tools Market .xlsx  Electric Vehicle Roller Bearings Market.xlsx  Electric and Hybrid Aircraft Propulsion System Market.xlsx  Electronic Money Market.xlsx  Extended Reality XR Devices Market .xlsx  Ferro Titanium Powder Market.xlsx  Fixed-wing Commercial UAV Market.xlsx  Food & Beverages Data Set.xlsx  Green Steel Market.xlsx  Healthcare CRM Market.xlsx  Hydrogen Vehicle Market.xlsx  In-Pipe Inspection Robot Market.xlsx  Internet-connected Doorbell Market.xlsx  (+29 more)
app/: __init__.py  main.py
app/api/: __init__.py  deps.py  routes.py
app/core/: config.py  features.py
app/db/: base.py  safety.py  session.py
app/models/: audit_event.py  campaign.py  company.py  contact.py  draft.py  email_evidence.py  enums.py  external_event.py  identity_resolution.py  import_batch.py  insight.py  provenance.py  salesnav_enrichment.py  score.py  suppression.py
app/services/: audit.py  campaigns.py  contact_state.py  devtools.py  identity.py  suppressions.py  workbench.py
app/services/enrichment/: companies.py  logodev.py
app/web/: __init__.py  routes.py
docs/: AGENTS.md  CLAUDE.md  DEVELOPMENT.md  GITHUB_BACKLOG.md  GOAL.md  PHASE_0.md  PHASE_1.md  POST_LAUNCH_BACKLOG.md  PROJECT_TRACKING.md  WORKBENCH.md  contact_input_contract.md
docs/decisions/: 0001-tech-stack.md
extensions/salesnav-capture/: .gitignore  README.md  manifest.json  package.json
migrations/: env.py
migrations/versions/: 2ea0cc07b430_dat_010_salesnav_company_domain_.py  906334bc481c_dat_004_identity_resolution_and_merge_.py  a7c2f1d40e88_workbench_ambiguous_outcome_and_mapping.py  b2f7c1a904de_dat_009_salesnav_intake.py  b84699f38ef5_dat_001_core_schema_completion.py  c11379ba2041_phase_1_data_and_campaigns_schema.py  d955c69a6052_initial_audit_events.py
scripts/: dev_up.py  rds_migrate.py  smoke.py
tests/: conftest.py  test_api.py  test_audit_event.py  test_campaigns.py  test_config.py  test_contact_state.py  test_dev_tooling.py  test_devtools.py  test_features.py  test_health.py  test_identity_resolution.py  test_imports.py  test_logodev_client.py  test_mapping.py  test_migrations.py  test_normalization.py  test_parsing.py  test_preview_and_xlsx_import.py  test_rds_migrate.py  test_rds_safety.py  test_review_web.py  test_salesnav_domain_enrichment.py  test_salesnav_intake.py  test_salesnav_workbench.py  test_schema_dat001.py  test_staging.py  test_suppressions.py  test_validation.py  test_workbench_web.py
tests/fixtures/: contacts_representative.csv
(+75 files in other folders)
