[project]
name = "vmr-outbound"
version = "0.0.1"
description = "VMR Outbound Agent — semi-automated outbound campaign operating system (Phase 0 foundation)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # 3.3.x returns text columns as bytes under some encodings and breaks the
    # SQLAlchemy psycopg dialect; pin to the verified 3.2.x line.
    "psycopg[binary]>=3.1,<3.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Operator workbench (server-rendered UI) and spreadsheet imports.
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
    # Validates the Sales Navigator capture intake body against the extension's
    # committed contract schema (DAT-009). Draft 2020-12 validator.
    "jsonschema>=4.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "httpx>=0.27",
    "types-openpyxl>=3.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's dependency-injection idiom uses `Depends(...)` as an argument
# default, which B008 (function call in default argument) flags. This is the
# framework-sanctioned pattern, not a bug.
"app/api/routes.py" = ["B008"]
# Same FastAPI Depends(...) idiom on the workbench page routes.
"app/web/routes.py" = ["B008"]
# The synthetic fixture literals (CSV text, sample rows) exceed the line limit
# by nature; wrapping them would corrupt the fixture content.
"app/services/devtools.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = []
warn_unused_ignores = true
disallow_untyped_defs = true
# Migrations are generated/imperative Alembic scripts; exclude from strict typing.
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jsonschema.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["error::DeprecationWarning"]
